# chainlink-solana

./: .mockery.yaml  CODEOWNERS  Chain Writer  Makefile  go.mod  go.sum  solana.nix
.github/workflows/: e2e_custom_cl.yml  relay.yml  rust.yml  upstream-tracker.yml
contracts/: Anchor.toml  Cargo.toml  package.json  pnpm-lock.yaml
contracts/artifacts/localnet/: write_test-keypair.json
contracts/crates/chainlink-solana-data-streams/: README.md
contracts/examples/hello-world/: pnpm-lock.yaml
contracts/programs/contract-reader-interface-secondary/: Cargo.toml
contracts/programs/contract-reader-interface-secondary/src/: lib.rs
contracts/programs/contract-reader-interface/src/: lib.rs
contracts/programs/data-streams/access-controller/: Cargo.toml
contracts/programs/data-streams/access-controller/src/: lib.rs
contracts/programs/data-streams/verifier/: Cargo.toml  README.md  verifier-idl.json
contracts/programs/data-streams/verifier/src/: lib.rs
contracts/programs/data-streams/verifier/src/context/: initialize_account_data_context.rs  realloc_context.rs  set_access_controller_context.rs  verify_context.rs
contracts/programs/data-streams/verifier/src/evm/: encoding_test.rs  signature_test.rs
contracts/programs/data-streams/verifier/src/util/: compression_test.rs
contracts/programs/log-read-test/src/: event.rs  lib.rs
contracts/programs/write_test/: Cargo.toml
contracts/programs/write_test/src/: lib.rs
gauntlet/: package.json
integration-tests/: go.mod  go.sum
scripts/: install-solana-ci.sh
ts/: package.json  pnpm-lock.yaml
(+103 files in other folders)
