[workspace]
resolver = "2"
members = [
  "programs/data-streams/verifier",
  "programs/data-streams/access-controller",
  "programs/access-controller",
  "programs/contract-reader-interface",
  "programs/log-read-test",
  "programs/ocr_2",
  "programs/store",
  "crates/*",
]

[profile.dev]
overflow-checks = true

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
# -Znew-llvm-pass-manager

[profile.test]
overflow-checks = true
