[package]
name = "access-controller-data-streams"
version = "1.0.1"
description = "Access Controller for Data Streams"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "access_controller_data_streams"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"]}
static_assertions = "1.1.0"
arrayvec = { version = "1.0.1", path = "../../../crates/arrayvec" }

[dev-dependencies]
solana-program-test = "1.18.26"
solana-sdk = "1.18.26"
